# RawRefinery

./: .gitignore  README.md  README_BUILD.md  create_dmg.sh  linux.spec  main.py  main.spec  pyproject.toml
.github/workflows/: ci_build.yml
Assets/: RawRefineryIcon.icns
RawRefinery/: main.py
RawRefinery/application/: ClickableImageLabel.py  LogarithmicSlider.py  ModelHandler.py  RawRefineryApp.py  dng_utils.py  main.py  postprocessing.py  utils.py  viewing_utils.py
RawRefinery/model/: BigDecoder.py  CHASPA.py  Cond_NAFNet.py  Restorer.py  ablation_NAF.py
RawRefinery/train/: RawImagePatchDataset.py  RawSparseDataset.py  SmallRawDataset.py  load_model.py  pretraining.py
RawRefinery/utils/: image_utils.py  training_utils.py  viewing_utils.py
RawRefinery/verify/: model_signing_public_key.pem
linux/: README.md  RawRefinery.desktop  main.spec
macos/: main.spec
notebooks/: basic_training_model.ipynb  train_on_raws_GAN.ipynb  train_stage_test.ipynb
scripts/: generate_keys.py  sign_models.py
tests/: test_Flickr8k.py  test_model_handler.py
