[project]
name = "RawRefinery" 
version = "0.0.1"
description = "A demosaicing, denoising, and refining application for raw images."
authors = [
    { name = "Ryan Mueller"},
]
readme = "README.md"
requires-python = ">=3.8" 
license = { file = "LICENSE" }
keywords = ["python", "Machine Learning", "Camera Raw"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [

    ]

[project.optional-dependencies]

preprocessing = [
]

[project.urls]
"Homepage" = "https://github.com/rymuelle/RawRefinery"
"Bug Tracker" = "https://github.com/rymuelle/RawRefinery/issues"

[build-system]
requires = ["setuptools>=61.0"] 
build-backend = "setuptools.build_meta" 

[tool.setuptools.packages.find]
where = ["."]